added cloud button

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,4 +1,12 @@
 <div id="learnMoreBtnWrap">
+  <button
+    id="cloudBtn"
+    style="position: fixed; bottom: 50px"
+    onclick="location.href='https://cloud.tavin.xyz'"
+  >
+    Tavin.xyz Cloud (Beta)
+  </button>
+
   <button id="learnMoreBtn" onclick="location.hash='about'">Learn More</button>
   <button id="refreshBtn" onclick="location.reload();">Refresh Page</button>
 </div>
