adjsuted cloudbtn style

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,10 +1,8 @@
 <div id="learnMoreBtnWrap">
-  <button
-    id="cloudBtn"
-    style="position: fixed; bottom: 50px"
-    onclick="location.href='https://cloud.tavin.xyz'"
-  >
-    Tavin.xyz Cloud (Beta)
+  <button id="cloudBtn" onclick="location.href='https://cloud.tavin.xyz'">
+    Tavin.xyz Cloud
+    <br />
+    (Beta)
   </button>
 
   <button id="learnMoreBtn" onclick="location.hash='about'">Learn More</button>
