added cloud to nav

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,13 @@
               </span></a
             >
           </li>
+          <li class="menuItem">
+            <a id="cloudlink"
+              >Cloud<span class="Icon material-symbols-outlined">
+                cloud
+              </span></a
+            >
+          </li>
           <li id="loginItem" class="menuItem loginItem">
             <a id="login"
               >Login<span class="Icon material-symbols-outlined">
