--- a/public/html/status.html
+++ b/public/html/status.html
@@ -1,7 +1,1 @@
-<!-- An iframe -->
-<iframe
-  src="https://uptime.tavin.xyz/status/general"
-  width="100%"
-  height="100%"
-  style="overflow: hidden"
-></iframe>
+<h1>Redirecting</h1>
