added status button to menu, and redirect on /status

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,13 @@
               </span></a
             >
           </li>
+          <li class="menuItem">
+            <a id="statusLink"
+              >Status<span class="Icon material-symbols-outlined">
+                domain_verification
+              </span></a
+            >
+          </li>
           <li id="loginItem" class="menuItem loginItem">
             <a id="login"
               >Login<span class="Icon material-symbols-outlined">
