--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self' https://*;"
+      content="default-src 'self' https://* unsafe-inline unsafe-eval;"
     />
     <title>Tavin.xyz</title>
     <meta name="description" content="Tavin.xyz homepage" />
