updated to the new url

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,5 +1,5 @@
 <div id="learnMoreBtnWrap">
-  <button id="cloudBtn" onclick="location.href='https://cloud.tavin.xyz'">
+  <button id="cloudBtn" onclick="location.href='https://tavin.cloud'">
     Tavin.xyz Cloud
     <br />
     (Beta)
