removed "cloud" branding and changed to apps

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,9 +1,9 @@
 <div id="learnMoreBtnWrap">
-  <button id="cloudBtn" onclick="location.href='https://tavin.cloud'">
+  <!-- <button id="cloudBtn" onclick="location.href='https://tavin.cloud'">
     Tavin.xyz Cloud
     <br />
     (Beta)
-  </button>
+  </button> -->
 
   <button id="learnMoreBtn" onclick="location.hash='about'">Learn More</button>
   <button id="refreshBtn" onclick="location.reload();">Refresh Page</button>
