--- a/public/index.html
+++ b/public/index.html
@@ -81,26 +81,24 @@
             >
           </li>
           <li class="menuItem">
+            <a id="applink"
+              >Apps<span class="Icon material-symbols-outlined"> Apps </span></a
+            >
+          </li>
+          <li class="menuItem">
             <a id="about"
               >About<span class="Icon material-symbols-outlined">
                 help
               </span></a
             >
           </li>
-          <li class="menuItem">
+          <!-- <li class="menuItem">
             <a id="meetings"
               >Meet<span class="Icon material-symbols-outlined">
                 videocam
               </span></a
             >
-          </li>
-          <li class="menuItem">
-            <a id="cloudlink"
-              >Cloud<span class="Icon material-symbols-outlined">
-                cloud
-              </span></a
-            >
-          </li>
+          </li> -->
           <li class="menuItem">
             <a id="statusLink"
               >Status<span class="Icon material-symbols-outlined">
