links needed to use the outbound function not directly link

--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
           <li class="menuItem">
             <a
               id="Github"
-              onclick="externalLink('https://github.com/tavindotson/tavin-xyz-2.0')"
+              onclick="externalLink('https://git.tavin.xyz/tavin/tavin-xyz')"
               >Github<span class="Icon material-symbols-outlined">
                 code
               </span></a
