added meet button again

--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,13 @@
             >
           </li>
           <li class="menuItem">
+            <a id="meetings"
+              >Meet<span class="Icon material-symbols-outlined">
+                videocam
+              </span></a
+            >
+          </li>
+          <li class="menuItem">
             <a id="about"
               >About<span class="Icon material-symbols-outlined">
                 help
