service worker tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -192,11 +192,6 @@
         document.write("&copy;&nbsp;" + "&nbsp;Tavin.xyz&nbsp;" + year);
       </script>
     </div>
-    <script type="text/javascript">
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("./serviceworker.js");
-      }
-    </script>
     <div id="liveChatWrap" class="liveChat nomobile">
       <button
         id="liveChatBtn"
@@ -212,5 +207,18 @@
         Hide</a
       >
     </div>
+    <script type="text/javascript">
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("service-worker.js");
+      }
+
+      document.querySelector("#show").addEventListener("click", () => {
+        const iconUrl =
+          document.querySelector("select").selectedOptions[0].value;
+        let imgElement = document.createElement("img");
+        imgElement.src = iconUrl;
+        document.querySelector("#container").appendChild(imgElement);
+      });
+    </script>
   </body>
 </html>
