incorrect filename 'service-worker.js' -> 'serviceworker.js'

--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
     </div>
     <script type="text/javascript">
       if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("service-worker.js");
+        navigator.serviceWorker.register("serviceworker.js");
       }
     </script>
   </body>
