--- a/public/html/about.html
+++ b/public/html/about.html
@@ -3,9 +3,7 @@
     <p>
       This is
       <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a>
-      playground for experimenting with web technologies. Services are provided
-      free-of-charge under
-      <a class="inlineLink" onclick="location.hash='terms'">these terms</a>.
+      playground for experimenting with web technologies.
     </p>
     <p>
       If you want to get in touch, you can
