--- a/public/html/terms.html
+++ b/public/html/terms.html
@@ -1,4 +1,4 @@
-<div style="width: 90%; text-align: left; font-size: 18px; padding-top: 15px">
+<!-- <div style="width: 90%; text-align: left; font-size: 18px; padding-top: 15px">
   <h2>How your data is used</h2>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -98,4 +98,4 @@
   <button onclick="location.hash='home'" style="margin-bottom: 25px">
     Go Home
   </button>
-</div>
+</div> -->
