--- a/public/index.html
+++ b/public/index.html
@@ -82,12 +82,14 @@
           </li>
           <li class="menuItem">
             <a id="applink"
-              >Apps<span class="Icon material-symbols-outlined"> Apps </span></a
+              >Quick Links<span class="Icon material-symbols-outlined">
+                Apps
+              </span></a
             >
           </li>
           <li class="menuItem">
             <a id="meetings"
-              >Meet<span class="Icon material-symbols-outlined">
+              >Jitsi Meet<span class="Icon material-symbols-outlined">
                 videocam
               </span></a
             >
@@ -143,7 +145,7 @@
           </li>
           <li class="menuItem">
             <a id="data"
-              >Data<span class="Icon material-symbols-outlined">
+              >Example Data<span class="Icon material-symbols-outlined">
                 database
               </span></a
             >
