adjusting for the new fullscreen code

--- a/public/index.html
+++ b/public/index.html
@@ -82,14 +82,13 @@
           </li>
           <li class="menuItem">
             <a id="applink"
-              >Quick Links<span class="Icon material-symbols-outlined">
-                Apps
-              </span></a
+              >Apps<span class="Icon material-symbols-outlined"> Apps </span></a
             >
           </li>
-          <li class="menuItem">
+          <!-- ! Jitsi Meet has been out of service for a while now.  -->
+          <li class="menuItem" style="display: none">
             <a id="meetings"
-              >Jitsi Meet<span class="Icon material-symbols-outlined">
+              >Meet Now<span class="Icon material-symbols-outlined">
                 videocam
               </span></a
             >
@@ -101,13 +100,7 @@
               </span></a
             >
           </li>
-          <!-- <li class="menuItem">
-            <a id="meetings"
-              >Meet<span class="Icon material-symbols-outlined">
-                videocam
-              </span></a
-            >
-          </li> -->
+          =
           <li class="menuItem">
             <a id="statusLink"
               >Status<span class="Icon material-symbols-outlined">
