added comments that will become code for turnstile

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,20 @@
       rel="stylesheet"
       href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <!-- <script
+      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+      async
+      defer
+    ></script> -->
   </head>
   <body
     onbeforeunload="if (sessionStorage.getItem('anon') == 'true') {return logout()}"
   >
+    <!-- <div
+      class="cf-turnstile"
+      data-sitekey="0x4AAAAAAABuCyn0qUuFgFzn"
+      data-callback="javascriptCallback"
+    ></div> -->
     <div class="hoverWhite header">
       <span
         id="menuButton"
