--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
       rel="stylesheet"
       href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <!-- <script
+    <script
       src="https://challenges.cloudflare.com/turnstile/v0/api.js"
       async
       defer
-    ></script> -->
+    ></script>
   </head>
   <body
     onbeforeunload="if (sessionStorage.getItem('anon') == 'true') {return logout()}"
