--- a/public/index.html
+++ b/public/index.html
@@ -95,12 +95,9 @@
               >Apps<span class="Icon material-symbols-outlined"> Apps </span></a
             >
           </li>
-          <!-- ! Jitsi Meet has been out of service for a while now.  -->
-          <li class="menuItem" style="display: none">
-            <a id="meetings"
-              >Meet Now<span class="Icon material-symbols-outlined">
-                videocam
-              </span></a
+          <li class="menuItem">
+            <a id="wikiLink"
+              >Wiki<span class="Icon material-symbols-outlined"> information-outline </span></a
             >
           </li>
           <li class="menuItem">
