--- a/public/index.html
+++ b/public/index.html
@@ -92,12 +92,14 @@
           </li>
           <li class="menuItem">
             <a id="applink"
-              >Apps<span class="Icon material-symbols-outlined"> Apps </span></a
+              >Apps<span class="Icon material-symbols-outlined"> apps </span></a
             >
           </li>
           <li class="menuItem">
             <a id="wikiLink"
-              >Wiki<span class="Icon material-symbols-outlined"> information-outline </span></a
+              >Wiki<span class="Icon material-symbols-outlined">
+                information-outline
+              </span></a
             >
           </li>
           <li class="menuItem">
