--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
           <li class="menuItem">
             <a id="wikiLink"
               >Wiki<span class="Icon material-symbols-outlined">
-                information-outline
+                information
               </span></a
             >
           </li>
