--- a/public/index.html
+++ b/public/index.html
@@ -97,9 +97,7 @@
           </li>
           <li class="menuItem">
             <a id="wikiLink"
-              >Wiki<span class="Icon material-symbols-outlined">
-                information
-              </span></a
+              >Wiki<span class="Icon material-symbols-outlined"> info </span></a
             >
           </li>
           <li class="menuItem">
