added chat button

--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,8 @@
             >
           </li>
           <li class="menuItem">
-            <a id="wikiLink"
-              >Wiki<span class="Icon material-symbols-outlined"> info </span></a
+            <a id="chatLink"
+              >Chat<span class="Icon material-symbols-outlined"> chat </span></a
             >
           </li>
           <li class="menuItem">
