adding the GPL license

--- a/public/html/apps.html
+++ b/public/html/apps.html
@@ -1,4 +1,19 @@
+<!-- (c) 2023 Tavin Dotson (tjd@tavin.xyz) -->
 <iframe
   src="https://apps.tavin.xyz/"
   style="margin: 0; padding: 0; border: 0; width: 100%; height: 100%"
 ></iframe>
+<!-- 
+This is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+The code is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+The source code should include a copy of the GPL.
+If not, see <https://www.gnu.org/licenses/>.
+ -->
