--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,3 +1,4 @@
+<!-- (c) 2023 Tavin Dotson (tjd@tavin.xyz) -->
 <div id="learnMoreBtnWrap">
   <!-- <button id="cloudBtn" onclick="location.href='https://tavin.cloud'">
     Tavin.xyz Cloud
@@ -8,3 +9,17 @@
   <button id="learnMoreBtn" onclick="location.hash='about'">Learn More</button>
   <button id="refreshBtn" onclick="location.reload();">Refresh Page</button>
 </div>
+<!-- 
+This is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+The code is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+The source code should include a copy of the GPL.
+If not, see <https://www.gnu.org/licenses/>.
+ -->
