--- a/public/html/tavin.html
+++ b/public/html/tavin.html
@@ -1,3 +1,4 @@
+<!-- (c) 2023 Tavin Dotson (tjd@tavin.xyz) -->
 <div id="aboutWrap">
   <img
     src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/tavin.webp"
@@ -7,3 +8,17 @@
   <p>More info coming soon.</p>
   <button onclick="location.hash='home'">Go Home</button>
 </div>
+<!-- 
+This is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+The code is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+The source code should include a copy of the GPL.
+If not, see <https://www.gnu.org/licenses/>.
+ -->
