--- a/public/html/terms.html
+++ b/public/html/terms.html
@@ -1,3 +1,4 @@
+<!-- (c) 2023 Tavin Dotson (tjd@tavin.xyz) -->
 <!-- <div style="width: 90%; text-align: left; font-size: 18px; padding-top: 15px">
   <h2>How your data is used</h2>
   <p>
@@ -99,3 +100,17 @@
     Go Home
   </button>
 </div> -->
+<!-- 
+This is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+The code is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+The source code should include a copy of the GPL.
+If not, see <https://www.gnu.org/licenses/>.
+ -->
