added wiki link

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -3,7 +3,9 @@
     <p>
       This is
       <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a>
-      playground for experimenting with web technologies.
+      playground for experimenting with web technologies. Visit the <a class="inlineLink" onclick="externalLink('https://wiki.tavin.xyz')"
+      >email</a
+    > to learn more.
     </p>
     <p>
       If you want to get in touch, you can
