wiki link fixed

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -4,7 +4,7 @@
       This is
       <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a>
       playground for experimenting with web technologies. Visit the <a class="inlineLink" onclick="externalLink('https://wiki.tavin.xyz')"
-      >email</a
+      >wiki</a
     > to learn more.
     </p>
     <p>
