adjusted tavin dotson link to point to wiki

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -2,7 +2,7 @@
   <div>
     <p>
       This is
-      <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a>
+      <a class="inlineLink" onclick="externalLink('https://wiki.tavin.xyz/en/about')">Tavin Dotson's</a>
       playground for experimenting with web technologies. Visit the <a class="inlineLink" onclick="externalLink('https://wiki.tavin.xyz')"
       >wiki</a
     > to learn more.
