added umami script

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
       async
       defer
     ></script>
+    <script async src="https://umami.tavin.xyz/script.js" data-website-id="94991010-2a15-494c-94d6-98f3c18447f6"></script>
   </head>
   <body
     onbeforeunload="if (sessionStorage.getItem('anon') == 'true') {return logout()}"
