--- a/public/404.html
+++ b/public/404.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page Not Found</title>
     <script src="./scripts/modules/404.js" type="module"></script>
+    <script async src="https://umami.tavin.xyz/script.js" data-website-id="94991010-2a15-494c-94d6-98f3c18447f6"></script>
   </head>
   <body style="background-color: black"></body>
 </html>
