added wiki link to sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -93,20 +93,25 @@
             >
           </li>
           <li class="menuItem">
+            <a id="about"
+              >About<span class="Icon material-symbols-outlined">
+                help
+              </span></a
+            >
+          </li>
+          <li class="menuItem">
             <a id="applink"
               >Apps<span class="Icon material-symbols-outlined"> apps </span></a
             >
           </li>
           <li class="menuItem">
-            <a id="chatLink"
-              >Chat<span class="Icon material-symbols-outlined"> chat </span></a
+            <a id="wikiLink"
+              >Wiki<span class="Icon material-symbols-outlined"> bookshelf </span></a
             >
           </li>
           <li class="menuItem">
-            <a id="about"
-              >About<span class="Icon material-symbols-outlined">
-                help
-              </span></a
+            <a id="chatLink"
+              >Chat<span class="Icon material-symbols-outlined"> chat </span></a
             >
           </li>
           <li class="menuItem">
