adjusted icon from bookshelf to book

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
           </li>
           <li class="menuItem">
             <a id="wikiLink"
-              >Wiki<span class="Icon material-symbols-outlined"> bookshelf </span></a
+              >Wiki<span class="Icon material-symbols-outlined"> book </span></a
             >
           </li>
           <li class="menuItem">
