changed wiki link to stream link

--- a/public/html/stream.html
+++ b/public/html/stream.html
@@ -7,6 +7,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    border: none; /* Remove iframe border */
+    border-radius: 10px; /* Rounded corners for a modern look */
+    overflow: hidden; /* Hide horizontal overflow */
+    margin: 0 auto; /* Center the iframe horizontally */
   "
   referrerpolicy="origin"
   scrolling="no"
