--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,11 @@
       async
       defer
     ></script>
-    <script async src="https://umami.tavin.xyz/script.js" data-website-id="c7cbeac4-2836-4a2a-b7d5-adfae97fe863"></script>
+    <script
+      async
+      src="https://umami.tavin.xyz/script.js"
+      data-website-id="c7cbeac4-2836-4a2a-b7d5-adfae97fe863"
+    ></script>
   </head>
   <body
     onbeforeunload="if (sessionStorage.getItem('anon') == 'true') {return logout()}"
@@ -105,8 +109,10 @@
             >
           </li>
           <li class="menuItem">
-            <a id="wikiLink"
-              >Wiki<span class="Icon material-symbols-outlined"> book </span></a
+            <a id="streamLink"
+              >Stream<span class="Icon material-symbols-outlined">
+                camera
+              </span></a
             >
           </li>
           <li class="menuItem">
