streamLink now takes you to the website rather than the embed

--- a/public/html/stream.html
+++ b/public/html/stream.html
@@ -12,7 +12,7 @@
     overflow: hidden; /* Hide horizontal overflow */
     margin: 0 auto; /* Center the iframe horizontally */
   "
-  referrerpolicy="origin"
+  referrerpolicy="no-referrer"
   scrolling="no"
   allowfullscreen
 >
