updated manifest and link refs to icons

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,44 @@
     <title>Tavin.xyz</title>
     <meta name="description" content="Tavin.xyz homepage" />
     <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/apple-touch-icon.png"
+    />
+    <link
       rel="icon"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/favicon.ico"
+      type="image/png"
+      sizes="32x32"
+      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-16x16.png"
     />
     <link rel="manifest" href="./manifest.json" />
     <link
-      rel="apple-touch-icon"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/apple-touch-icon.png"
+      rel="mask-icon"
+      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/safari-pinned-tab.svg"
+      color="#000000"
     />
+    <link
+      rel="shortcut icon"
+      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon.ico"
+    />
+    <meta name="apple-mobile-web-app-title" content="Tavin.xyz" />
+    <meta name="application-name" content="Tavin.xyz" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta
+      name="msapplication-TileImage"
+      content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/mstile-144x144.png"
+    />
+    <meta
+      name="msapplication-config"
+      content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#000000" />
     <script src="./scripts/modules/w3.js"></script>
     <script async src="./scripts/main.js" type="module"></script>
     <link id="stylesheet" rel="stylesheet" href="./styles/main.css" />
