--- a/public/html/about.html
+++ b/public/html/about.html
@@ -2,10 +2,8 @@
   <div>
     <p>
       This is
-      <a class="inlineLink" onclick="externalLink('https://wiki.tavin.xyz/en/about')">Tavin Dotson's</a>
-      playground for experimenting with web technologies. Visit the <a class="inlineLink" onclick="externalLink('https://wiki.tavin.xyz')"
-      >wiki</a
-    > to learn more.
+      <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson</a>'s 
+      playground for experimenting with web technologies.
     </p>
     <p>
       If you want to get in touch, you can
