--- a/public/index.html
+++ b/public/index.html
@@ -91,14 +91,14 @@
       >
         menu
       </span>
-      <span
+      <!-- <span
         title="Download"
         id="downloadBtn"
         class="hoverWhite downloadBtn material-symbols-outlined"
         onclick="window.location.hash = 'pwa';"
       >
         download
-      </span>
+      </span> -->
       <span
         title="Fullscreen"
         id="fullscreenButton"
@@ -138,25 +138,25 @@
               >Apps<span class="Icon material-symbols-outlined"> apps </span></a
             >
           </li>
-          <li class="menuItem">
+          <!-- <li class="menuItem">
             <a id="streamLink"
               >Stream<span class="Icon material-symbols-outlined">
                 camera
               </span></a
             >
-          </li>
+          </li> -->
           <li class="menuItem">
             <a id="chatLink"
               >Chat<span class="Icon material-symbols-outlined"> chat </span></a
             >
           </li>
-          <li class="menuItem">
+          <!-- <li class="menuItem">
             <a id="statusLink"
               >Status<span class="Icon material-symbols-outlined">
                 domain_verification
               </span></a
             >
-          </li>
+          </li> -->
           <li id="loginItem" class="menuItem loginItem">
             <a id="login"
               >Login<span class="Icon material-symbols-outlined">
