--- a/public/html/tavin.html
+++ b/public/html/tavin.html
@@ -2,8 +2,8 @@
   <img
     src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/tavin.webp"
     alt="Tavin Dotson"
-    id="tavinIMG"
-  />
-  <p>More info coming soon.</p>
+    id="tavinIMG"/>
+  <br />Tavin Dotson
+  <br /><i><span style="font-size: .7em;">More info coming soon.</span></i>
   <button onclick="location.hash='home'">Go Home</button>
 </div>
