corrected git.tavin.xyz link

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
           <li class="menuItem">
             <a
               id="Github"
-              onclick="externalLink('https://git.tavin.xyz/tavin/tavin-xyz')"
+              onclick="externalLink('https://git.tavin.xyz/tavindotson/tavin-xyz')"
               >Github<span class="Icon material-symbols-outlined">
                 code
               </span></a
