removed excess comments

--- a/classic/html/buttons.html
+++ b/classic/html/buttons.html
@@ -1,4 +1,4 @@
-<button
+<!-- <button
   class="button sidebarbtn"
   id="contactbtn"
   onclick="updateHash('contact','Contact Me');"
@@ -51,4 +51,4 @@
   onclick="updateHash('home','Welcome!');"
 >
   Go Home <span class="material-icons buttonicons" id="homeicon"> home </span>
-</button>
+</button> -->
