--- a/public/html/meetings.html
+++ b/public/html/meetings.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
   id="meeting_button_wrap"
   class="meeting_button_wrap"
   style="
@@ -25,4 +25,4 @@
     Join Meeting
   </button>
   <button onclick="location.hash='home'">Go Home</button>
-</div>
+</div> -->
