--- a/public/html/report.html
+++ b/public/html/report.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScFRYYwEi-o5xVtzatJLBkZgbEQhiRzOIbhpuaYBmiAfPyiWA/viewform?embedded=true" width="640" height="1247" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe style="width: 100%;" src="https://docs.google.com/forms/d/e/1FAIpQLScFRYYwEi-o5xVtzatJLBkZgbEQhiRzOIbhpuaYBmiAfPyiWA/viewform?embedded=true" width="100%" height="1247" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
