attempting to fix the sidebar issue on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -151,6 +151,11 @@
               >Chat<span class="Icon material-symbols-outlined"> chat </span></a
             >
           </li>
+          <li class="menuItem">
+            <a id="reportLink"
+              >Report Bug<span class="Icon material-symbols-outlined"> bug </span></a
+            >
+          </li>
           <!-- <li class="menuItem">
             <a id="statusLink"
               >Status<span class="Icon material-symbols-outlined">
