updated mdi icon for report bug

--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
           </li>
           <li class="menuItem">
             <a id="reportLink"
-              >Report Bug<span class="Icon material-symbols-outlined"> bug </span></a
+              >Report Bug<span class="Icon material-symbols-outlined"> error </span></a
             >
           </li>
           <!-- <li class="menuItem">
