--- a/public/html/tavin.html
+++ b/public/html/tavin.html
@@ -1,6 +1,6 @@
 <div id="aboutWrap">
   <img
-    src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/tavin.webp"
+    src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/profile-small.webp"
     alt="Tavin Dotson"
     id="tavinIMG"/>
   <br />Tavin Dotson
