updated chat page

--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -12,11 +12,10 @@
     src="https://tawk.to/chat/623586c01ffac05b1d7f572e/1fughcojr"
     id="tawkto_frame"
     class="hoverWhite nomobile"
-  ></iframe>
+  >Disable your adblocker to use chat. Or <a onclick="externalLink('https://tawk.to/chat/623586c01ffac05b1d7f572e/1fughcojr')">click here</a>.</iframe>
   <button
     onclick="externalLink('https://tawk.to/chat/623586c01ffac05b1d7f572e/1fughcojr')"
-    style="max-width: 80%"
-    class="nocomputer"
+    style="max-width: 80%;margin-top: 15px;"
   >
     Open in new tab
   </button>
