--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
           align-items: center;
         "
       >
-        <h1 class="sidebarTitle userMenuTitle">User</h1>
+        <h1 id="userMenu" class="sidebarTitle userMenuTitle">User</h1>
         <ul class="menu">
           <li id="logoutItem" class="menuItem logoutItem">
             <a id="logout"
