--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,12 +1,16 @@
 <div id="aboutWrap">
   <div>
     <p>
-      This is
-      <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson</a>'s 
-      playground for experimenting with web technologies.
+      This is my (<a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson</a>) 
+      playground for experimentation. You are welcome to use any services or apps found at <a class="inlineLink" onclick="externalLink('https://apps.tavin.xyz')">apps.tavin.xyz</a>, but I may take services down without notice.
+      You can check the uptime status of services at <a class="inlineLink" onclick="externalLink('https://uptime.tavin.xyz')">uptime.tavin.xyz</a>.
     </p>
     <p>
-      If you want to get in touch, you can
+      If you need support or are having an issue, visit
+      <a class="inlineLink" onclick="externalLink('https://help.tavin.xyz')">help.tavin.xyz</a>.
+    </p>
+    <p>
+      To get in touch, you can
       <a class="inlineLink" onclick="externalLink('mailto:tjd@tavin.xyz')"
         >email</a
       >
