--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,9 +1,7 @@
 <div id="aboutWrap">
-  <div>
     <p>
-      This is my (<a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson</a>) 
-      playground for experimentation. You are welcome to use any services or apps found at <a class="inlineLink" onclick="externalLink('https://apps.tavin.xyz')">apps.tavin.xyz</a>, but I may take services down without notice.
-      You can check the uptime status of services at <a class="inlineLink" onclick="externalLink('https://uptime.tavin.xyz')">uptime.tavin.xyz</a>.
+      This is <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a> 
+      playground for experimentation.
     </p>
     <p>
       If you need support or are having an issue, visit
@@ -21,5 +19,4 @@
         >live chat</a
       >.
     </p>
-  </div>
 </div>
