--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,7 +1,7 @@
 <div id="aboutWrap">
     <p>
       This is <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a> 
-      playground for experimentation.
+      playground for experimenting with web technologies.
     </p>
     <p>
       If you need support or are having an issue, visit
