--- a/public/html/about.html
+++ b/public/html/about.html
@@ -9,7 +9,7 @@
     </p>
     <p>
       To get in touch, you can
-      <a class="inlineLink" onclick="externalLink('mailto:tjd@tavin.xyz')"
+      <a class="inlineLink" href="mailto:tjd@tavin.xyz"
         >email</a
       >
       or
