--- a/public/html/about.html
+++ b/public/html/about.html
@@ -8,10 +8,7 @@
       <a class="inlineLink" onclick="externalLink('https://help.tavin.xyz')">help.tavin.xyz</a>.
     </p>
     <p>
-      To get in touch, you can
-      <a class="inlineLink" href="mailto:tjd@tavin.xyz"
-        >email</a
-      >
+      To get in touch, you can <a class="inlineLink" onclick="location.hash('about')">email tjd@tavin.xyz</a>
       or
       <a
         class="inlineLink"
