added logo to sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,7 @@
           align-items: center;
         "
       >
+        <img id="logoSidebar" src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/logo-min.png" />
         <h1 class="sidebarTitle">Menu</h1>
         <ul class="menu">
           <li class="menuItem">
