changed 'report bug' to 'issue'

--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
           </li>
           <li class="menuItem">
             <a id="reportLink"
-              >Report Bug<span class="Icon material-symbols-outlined"> error </span></a
+              >Issue<span class="Icon material-symbols-outlined"> error </span></a
             >
           </li>
           <!-- <li class="menuItem">
