--- a/public/index.html
+++ b/public/index.html
@@ -2,266 +2,107 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="theme-color" content="#000000" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self' https://* 'unsafe-inline' 'unsafe-eval';"
-    />
-    <title>Tavin.xyz</title>
-    <meta name="description" content="Tavin.xyz homepage" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./manifest.json" />
-    <link
-      rel="mask-icon"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/safari-pinned-tab.svg"
-      color="#000000"
-    />
-    <link
-      rel="shortcut icon"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon.ico"
-    />
-    <meta name="apple-mobile-web-app-title" content="Tavin.xyz" />
-    <meta name="application-name" content="Tavin.xyz" />
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta
-      name="msapplication-TileImage"
-      content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/mstile-144x144.png"
-    />
-    <meta
-      name="msapplication-config"
-      content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/browserconfig.xml"
-    />
-    <meta name="theme-color" content="#000000" />
-    <script src="./scripts/modules/w3.js"></script>
-    <script async src="./scripts/main.js" type="module"></script>
-    <link id="stylesheet" rel="stylesheet" href="./styles/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Jura"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <script
-      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
-      async
-      defer
-    ></script>
-    <script
-      async
-      src="https://umami.tavin.xyz/script.js"
-      data-website-id="c7cbeac4-2836-4a2a-b7d5-adfae97fe863"
-    ></script>
-  </head>
-  <body
-    onbeforeunload="if (sessionStorage.getItem('anon') == 'true') {return logout()}"
-  >
-    <!-- <div
-      class="cf-turnstile"
-      data-sitekey="0x4AAAAAAABuCyn0qUuFgFzn"
-      data-callback="javascriptCallback"
-    ></div> -->
-    <div class="hoverWhite header">
-      <span
-        id="menuButton"
-        style="display: none"
-        class="menuButton material-symbols-outlined"
-      >
-        menu
-      </span>
-      <!-- <span
-        title="Download"
-        id="downloadBtn"
-        class="hoverWhite downloadBtn material-symbols-outlined"
-        onclick="window.location.hash = 'pwa';"
-      >
-        download
-      </span> -->
-      <span
-        title="Fullscreen"
-        id="fullscreenButton"
-        class="hoverWhite fullscreenButton material-symbols-outlined nomobile"
-      >
-        fullscreen
-      </span>
-      <span id="welcomeTitle">Welcome</span>
+<head>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" content="#000000" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://* 'unsafe-inline' 'unsafe-eval';" />
+  <title>Tavin.xyz</title>
+  <meta name="description" content="Tavin.xyz homepage" />
+  <link rel="manifest" href="./manifest.json" />
+  <meta name="apple-mobile-web-app-title" content="Tavin.xyz" />
+  <meta name="application-name" content="Tavin.xyz" />
+  <meta name="msapplication-TileColor" content="#000000" />
+  <meta name="msapplication-TileImage" content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/mstile-144x144.png" />
+  <meta name="msapplication-config" content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/browserconfig.xml" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jura" />
+  <link rel="preload" href="./styles/main.css" as="style" />
+  <link rel="preload" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" as="style" />
+  <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" media="print" onload="this.media='all'" />
+  <link rel="stylesheet" href="./styles/main.css" media="print" onload="this.media='all'" />
+  <script async src="./scripts/main.js" type="module"></script>
+  <link rel="preload" href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/apple-touch-icon.png" as="image" />
+  <link rel="preload" href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-32x32.png" as="image" />
+  <link rel="preload" href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-16x16.png" as="image" />
+  <link rel="preload" href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/safari-pinned-tab.svg" as="image" />
+  <link rel="preload" href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon.ico" as="image" />
+  <script src="./scripts/modules/w3.js" async></script>
+  <style>
+    .hoverWhite { color: #fff; }
+    .footer { background-color: #000; }
+  </style>
+</head>
+<body onbeforeunload="if (sessionStorage.getItem('anon') == 'true') {return logout()}">
+  <div class="hoverWhite header">
+    <span id="menuButton" style="display: none" class="menuButton material-symbols-outlined">menu</span>
+    <span title="Fullscreen" id="fullscreenButton" class="hoverWhite fullscreenButton material-symbols-outlined nomobile">fullscreen</span>
+    <span id="welcomeTitle">Welcome</span>
+  </div>
+  <div id="sidebar" class="hoverWhite sidebar">
+    <div id="menuWrap" class="menuWrap" style="width: 100%; display: flex; flex-direction: column; align-items: center;">
+      <img id="logoSidebar" src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/logo-min.png" />
+      <h1 class="sidebarTitle">Menu</h1>
+      <ul class="menu">
+        <li class="menuItem">
+          <a id="home">Home<span class="Icon material-symbols-outlined"> home </span></a>
+        </li>
+        <li class="menuItem">
+          <a id="about">About<span class="Icon material-symbols-outlined"> help </span></a>
+        </li>
+        <li class="menuItem">
+          <a id="applink">Apps<span class="Icon material-symbols-outlined"> apps </span></a>
+        </li>
+        <li class="menuItem">
+          <a id="chatLink">Chat<span class="Icon material-symbols-outlined"> chat </span></a>
+        </li>
+        <li class="menuItem">
+          <a id="reportLink">Issue<span class="Icon material-symbols-outlined"> error </span></a>
+        </li>
+        <li id="loginItem" class="menuItem loginItem">
+          <a id="login">Login<span class="Icon material-symbols-outlined"> login </span></a>
+        </li>
+      </ul>
     </div>
-    <div id="sidebar" class="hoverWhite sidebar">
-      <div
-        id="menuWrap"
-        class="menuWrap"
-        style="
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        "
-      >
-        <img id="logoSidebar" src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/logo-min.png" />
-        <h1 class="sidebarTitle">Menu</h1>
-        <ul class="menu">
-          <li class="menuItem">
-            <a id="home"
-              >Home<span class="Icon material-symbols-outlined"> home </span></a
-            >
-          </li>
-          <li class="menuItem">
-            <a id="about"
-              >About<span class="Icon material-symbols-outlined">
-                help
-              </span></a
-            >
-          </li>
-          <li class="menuItem">
-            <a id="applink"
-              >Apps<span class="Icon material-symbols-outlined"> apps </span></a
-            >
-          </li>
-          <!-- <li class="menuItem">
-            <a id="streamLink"
-              >Stream<span class="Icon material-symbols-outlined">
-                camera
-              </span></a
-            >
-          </li> -->
-          <li class="menuItem">
-            <a id="chatLink"
-              >Chat<span class="Icon material-symbols-outlined"> chat </span></a
-            >
-          </li>
-          <li class="menuItem">
-            <a id="reportLink"
-              >Issue<span class="Icon material-symbols-outlined"> error </span></a
-            >
-          </li>
-          <!-- <li class="menuItem">
-            <a id="statusLink"
-              >Status<span class="Icon material-symbols-outlined">
-                domain_verification
-              </span></a
-            >
-          </li> -->
-          <li id="loginItem" class="menuItem loginItem">
-            <a id="login"
-              >Login<span class="Icon material-symbols-outlined">
-                login
-              </span></a
-            >
-          </li>
-        </ul>
-      </div>
-      <div
-        id="userMenu"
-        class="userMenu"
-        style="
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        "
-      >
-        <h1 id="userMenu" class="sidebarTitle userMenuTitle">User</h1>
-        <ul class="menu">
-          <li id="logoutItem" class="menuItem logoutItem">
-            <a id="logout"
-              >Logout<span class="Icon material-symbols-outlined">
-                logout
-              </span></a
-            >
-          </li>
-          <li class="menuItem">
-            <a id="data"
-              >Example Data<span class="Icon material-symbols-outlined">
-                database
-              </span></a
-            >
-          </li>
-          <li class="menuItem">
-            <a id="theme"
-              >Theme<span class="Icon material-symbols-outlined">
-                dark_mode
-              </span></a
-            >
-          </li>
-          <li class="menuItem">
-            <a
-              id="Github"
-              onclick="externalLink('https://git.tavin.xyz/tavindotson/tavin-xyz')"
-              >Github<span class="Icon material-symbols-outlined">
-                code
-              </span></a
-            >
-          </li>
-        </ul>
-      </div>
-      <img
-        title="Hide Photo"
-        id="userPhoto"
-        class="hoverWhite userPhoto"
-        src=""
-      />
-      <span
-        id="userPhotoShow"
-        class="hoverWhite userPhotoShow"
-        onclick="document.getElementById('userPhoto').style.opacity = '1';document.getElementById('userPhotoShow').style.display = 'none'"
-      >
-        Show User Photo</span
-      >
+    <div id="userMenu" class="userMenu" style="width: 100%; display: flex; flex-direction: column; align-items: center;">
+      <h1 id="userMenu" class="sidebarTitle userMenuTitle">User</h1>
+      <ul class="menu">
+        <li id="logoutItem" class="menuItem logoutItem">
+          <a id="logout">Logout<span class="Icon material-symbols-outlined"> logout </span></a>
+        </li>
+        <li class="menuItem">
+          <a id="data">Example Data<span class="Icon material-symbols-outlined"> database </span></a>
+        </li>
+        <li class="menuItem">
+          <a id="theme">Theme<span class="Icon material-symbols-outlined"> dark_mode </span></a>
+        </li>
+      </ul>
     </div>
-    <div id="mainContentWrap" class="content">
-      <div id="mainContent" class="hoverWhite content"></div>
-      <div id="our3DContent"></div>
-    </div>
-
-    <div title="Thank you for visiting!" class="footer hoverWhite">
-      <script>
-        var d = new Date();
-        var year = d.getFullYear();
-        document.write("&copy;&nbsp;" + "&nbsp;Tavin.xyz&nbsp;" + year);
-      </script>
-    </div>
-    <div id="liveChatWrap" class="liveChat nomobile">
-      <button
-        id="liveChatBtn"
-        class="liveChatBtn"
-        onclick="liveChat();document.getElementById('liveChatWrap').style.display = 'none';"
-      >
-        Return to Chat
-      </button>
-      <a
-        class="hideBtn"
-        onclick="document.getElementById('liveChatWrap').style.display = 'none';"
-      >
-        Hide</a
-      >
-    </div>
-    <script type="text/javascript">
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("serviceworker.js");
-      }
+    <img title="Hide Photo" id="userPhoto" class="hoverWhite userPhoto" src="" />
+    <span id="userPhotoShow" class="hoverWhite userPhotoShow" onclick="document.getElementById('userPhoto').style.opacity = '1';document.getElementById('userPhotoShow').style.display = 'none'">Show User Photo</span>
+  </div>
+  <div id="mainContentWrap" class="content">
+    <div id="mainContent" class="hoverWhite content"></div>
+    <div id="our3DContent"></div>
+  </div>
+  <div title="Thank you for visiting!" class="footer hoverWhite">
+    <script>
+      var d = new Date();
+      var year = d.getFullYear();
+      document.write("&copy;&nbsp;" + "&nbsp;Tavin.xyz&nbsp;" + year);
     </script>
-  </body>
+  </div>
+  <div id="liveChatWrap" class="liveChat nomobile">
+    <button id="liveChatBtn" class="liveChatBtn" onclick="liveChat();document.getElementById('liveChatWrap').style.display = 'none';">Return to Chat</button>
+    <a class="hideBtn" onclick="document.getElementById('liveChatWrap').style.display = 'none';">Hide</a>
+  </div>
+  <script type="text/javascript">
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("serviceworker.js");
+    }
+  </script>
+</body>
 </html>
