updated site versions

--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,7 @@
       var year = d.getFullYear();
       document.write("&copy;&nbsp;" + "&nbsp;Tavin.xyz&nbsp;" + year);
     </script>
+    <span id="versionNum">V 0.1.0</span>
   </div>
   <div id="liveChatWrap" class="liveChat nomobile">
     <button id="liveChatBtn" class="liveChatBtn" onclick="liveChat();document.getElementById('liveChatWrap').style.display = 'none';">Return to Chat</button>
