--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,7 +1,7 @@
 <div id="aboutWrap">
     <p>
       This is <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a> 
-      playground for experimenting with web technologies.
+      playground for experimenting with web technologies. If you are looking for my photography, <a class="inlineLink" onclick="externalLink('https://unsplash.com/@citizenkosmos')">click here</a>.
     </p>
     <p>
       To get in touch, you can <a class="inlineLink" onclick="location.hash('about')">email tjd@tavin.xyz</a>
