--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,5 +1,6 @@
 <div id="learnMoreBtnWrap">
   <button id="learnMoreBtn" onclick="location.hash='about'">Learn More</button>
-  <button id="refreshBtn" onclick="externalLink('https://apps.tavin.xyz')">View Apps</button>
-  <button id="wikiBtn" onclick="externalLink('https://wiki.tavin.xyz/')">Visit the Wiki</button>
+  <button id="wikiBtn" onclick="externalLink('https://odoo.tavin.xyz/')">
+    Event & IT Services
+  </button>
 </div>
