moved from aws s3 to cloudflare r2

--- a/public/html/tavin.html
+++ b/public/html/tavin.html
@@ -1,9 +1,11 @@
 <div id="aboutWrap">
   <img
-    src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/profile-small.webp"
+    src="https://public.tavin.xyz/media/profile-small.webp"
     alt="Tavin Dotson"
-    id="tavinIMG"/>
-  <br />Tavin Dotson
-  <br /><i><span style="font-size: .7em;">More info coming soon.</span></i>
+    id="tavinIMG"
+  />
+  <br />Tavin Dotson <br /><i
+    ><span style="font-size: 0.7em">More info coming soon.</span></i
+  >
   <button onclick="location.hash='home'">Go Home</button>
 </div>
