--- a/public/index.html
+++ b/public/index.html
@@ -19,18 +19,18 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/logo-min.ico"
+      href="https://public.tavin.xyz/media/logo-min.ico"
     />
     <meta name="apple-mobile-web-app-title" content="Tavin.xyz" />
     <meta name="application-name" content="Tavin.xyz" />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta
       name="msapplication-TileImage"
-      content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/mstile-144x144.png"
+      content="https://public.tavin.xyz/web-icons/mstile-144x144.png"
     />
     <meta
       name="msapplication-config"
-      content="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/browserconfig.xml"
+      content="https://public.tavin.xyz/web-icons/browserconfig.xml"
     />
     <meta name="theme-color" content="#000000" />
     <link
@@ -58,27 +58,27 @@
     <script async src="./scripts/main.js" type="module"></script>
     <link
       rel="preload"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/apple-touch-icon.png"
+      href="https://public.tavin.xyz/web-icons/apple-touch-icon.png"
       as="image"
     />
     <link
       rel="preload"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-32x32.png"
+      href="https://public.tavin.xyz/web-icons/favicon-32x32.png"
       as="image"
     />
     <link
       rel="preload"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon-16x16.png"
+      href="https://public.tavin.xyz/web-icons/favicon-16x16.png"
       as="image"
     />
     <link
       rel="preload"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/safari-pinned-tab.svg"
+      href="https://public.tavin.xyz/web-icons/safari-pinned-tab.svg"
       as="image"
     />
     <link
       rel="preload"
-      href="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/web-icons/favicon.ico"
+      href="https://public.tavin.xyz/web-icons/favicon.ico"
       as="image"
     />
     <script src="./scripts/modules/w3.js" async></script>
@@ -122,7 +122,7 @@
       >
         <img
           id="logoSidebar"
-          src="https://tavin-xyz-public.s3.us-west-2.amazonaws.com/media/logo-min.png"
+          src="https://public.tavin.xyz/media/logo-min.png"
         />
         <h1 class="sidebarTitle">Menu</h1>
         <ul class="menu">
