moved from Google based auth to custom auth

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -8,17 +8,8 @@
     flex-direction: column;
   "
 >
-  <button
-    onclick="externalLink('https://auth.tavin.xyz')"
-    style="max-width: 80%; padding-right: 33px"
-  >
-    Login with Tavin.xyz<span class="Icon material-symbols-outlined">
-      link
-    </span>
-  </button>
-  <br />
   <button onclick="login();location.hash='home'" style="max-width: 80%">
-    Login with Google
+    Login
   </button>
   <button onclick="loginGuest();location.hash='home';" style="max-width: 80%">
     Login as Guest
