added apps button

--- a/public/index.html
+++ b/public/index.html
@@ -184,6 +184,11 @@
             >
           </li>
           <li class="menuItem">
+            <a id="app_link"
+              >Apps<span class="Icon material-symbols-outlined"> apps </span></a
+            >
+          </li>
+          <li class="menuItem">
             <a id="data"
               >Example Data<span class="Icon material-symbols-outlined">
                 database
