--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@
           </li>
           <li class="menuItem">
             <a id="data"
-              >Example Data<span class="Icon material-symbols-outlined">
+              >Data<span class="Icon material-symbols-outlined">
                 database
               </span></a
             >
@@ -229,7 +229,7 @@
       </script>
       <span id="versionNum"
         ><a onclick="externalLink('https://github.com/tavindotson/tavin-xyz')"
-          >V 0.1.2</a
+          >V 0.1.3</a
         ></span
       >
     </div>
