adjusted given new url work.tavin.xyz

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,15 +1,11 @@
 <div id="aboutWrap">
-    <p>
-      <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a> 
-      playground for experimenting with web technologies. If you are looking for my photography, <a class="inlineLink" onclick="externalLink('https://unsplash.com/@citizenkosmos')">click here</a>.
-    </p>
-    <p>
-      To get in touch, you can <a class="inlineLink" onclick="location.hash('about')">email tjd@tavin.xyz</a>
-      or
-      <a
-        class="inlineLink"
-        onclick="document.getElementById('liveChatWrap').style.display='none';liveChat();"
-        >live chat</a
-      >.
-    </p>
+  <p>
+    <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a>
+    playground for experimenting with web technologies. For other work,
+    <a
+      class="inlineLink"
+      onclick="window.open('https://work.tavin.xyz', '_self')"
+      >click here</a
+    >.
+  </p>
 </div>
