updated homeassistant page

--- a/public/html/homeassistant.html
+++ b/public/html/homeassistant.html
@@ -1,17 +1,5 @@
-<div id="aboutWrap">
-  <p>
-    Step 1
-    <br />
-    Plug in ethernet and power cables to the device.
-    <br />
-    <br />
-    Step 2
-    <br />
-    Wait 5 minutes.
-    <br />
-    <br />
-    Step 3
-    <br />
-    Open a web browser and go to http://homeassistant.local:8123
-  </p>
+<div id="haWrap">
+  <p>1. Plug in ethernet and power cables to the device.</p>
+  <p>2. Wait 5 minutes.</p>
+  <p>3. Open a web browser and go to http://homeassistant.local:8123</p>
 </div>
