corrected HA page formatting

--- a/public/html/homeassistant.html
+++ b/public/html/homeassistant.html
@@ -1,5 +1,9 @@
 <div id="haWrap">
-  <p>1. Plug in ethernet and power cables to the device.</p>
-  <p>2. Wait 5 minutes.</p>
-  <p>3. Open a web browser and go to http://homeassistant.local:8123</p>
+  <p style="hyphens: auto">
+    1. Plug in ethernet and power cables to the device.
+  </p>
+  <p style="hyphens: auto">2. Wait 5 minutes.</p>
+  <p style="hyphens: auto">
+    3. Open a web browser and go to homeassistant.local:8123
+  </p>
 </div>
