--- a/public/html/homeassistant.html
+++ b/public/html/homeassistant.html
@@ -6,4 +6,13 @@
   <p style="hyphens: auto">
     3. Open a web browser and go to homeassistant.local:8123
   </p>
+  <p>
+    4.
+    <a
+      class="inlineLink"
+      onclick="window.open('https://www.home-assistant.io/getting-started/onboarding/', '_self')"
+      >Click here</a
+    >
+    for further setup instructions.
+  </p>
 </div>
