--- a/public/html/homeassistant.html
+++ b/public/html/homeassistant.html
@@ -13,6 +13,7 @@
       onclick="window.open('https://www.home-assistant.io/getting-started/onboarding/', '_self')"
       >Click here</a
     >
-    for further setup instructions.
+    for further setup instructions. You may skip the "installation" step, as
+    that has already been completed for you.
   </p>
 </div>
