--- a/public/index.html
+++ b/public/index.html
@@ -138,11 +138,11 @@
               </span></a
             >
           </li>
-          <!-- <li class="menuItem">
+          <li class="menuItem">
             <a id="applink"
               >Apps<span class="Icon material-symbols-outlined"> apps </span></a
             >
-          </li> -->
+          </li>
           <li class="menuItem">
             <a id="chatLink"
               >Chat<span class="Icon material-symbols-outlined"> chat </span></a
