--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,11 +1,9 @@
 <div id="aboutWrap">
   <p>
     <a class="inlineLink" onclick="location.hash='tavin'">Tavin Dotson's</a>
-    playground for experimenting with web technologies. For other work,
-    <a
-      class="inlineLink"
-      onclick="window.open('https://work.tavin.xyz', '_self')"
-      >click here</a
-    >.
+    playground for experimenting with web technologies. This website is being
+    updated regularly. Please report any
+    <a class="inlineLink" onclick="location.hash='report'">issues</a> you run
+    into.
   </p>
 </div>
