hide login button

--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
               </span></a
             >
           </li>
-          <li id="loginItem" class="menuItem loginItem">
+          <li style="display: none" id="loginItem" class="menuItem loginItem">
             <a id="login"
               >Login<span class="Icon material-symbols-outlined">
                 login
